--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
 #title {
   text-align: center;
 }
+
+#color-palette {}
+
 .color {
   display: inline-block;
   border: black solid 1px;
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   margin: auto 30px;
+  position: relative;
 }
 
 #n1 {
@@ -24,3 +28,15 @@
 #n4 {
   background-color: blue;
 }
+
+#pixel-board {
+  margin-top: 50px;
+  border-collapse: collapse;
+}
+.pixel{
+  border: black solid 1px;
+  width: 40px;
+  height: 40px;
+  background-color: white;
+}
+
