--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-#title {
+body {
   text-align: center;
 }
 
@@ -31,10 +31,18 @@
 
 #pixel-board {
   margin-top: 50px;
-  border-collapse: collapse;
+  display: table;
+  border: black solid 1px;
 }
+
+.pixel-row {
+  display: table-row;
+  border: black solid 1px;
+}
+
 .pixel{
   border: black solid 1px;
+  display: table-cell;
   width: 40px;
   height: 40px;
   background-color: white;
